Update frontend Axios to point to Vercel backend

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ CLOUDINARY_API_KEY=458963141821824
 CLOUDINARY_API_SECRET=9s688LmXGbJmSnIF40rzJ9xxaT0
 CLOUD_NAME=dikvzhkxu
 ACCESS_TOKEN_SECRET=hgfbeqbhkADYWDVdgh
+VITE_API_URL=https://auth-backend-nine.vercel.app
+
